--- a/packages/prometheus-process/PKGBUILD
+++ b/packages/prometheus-process/PKGBUILD
@@ -49,26 +49,20 @@ conflicts=(
 
 backup=(
   "/etc/default/${pkgname}"
-  "/opt/zextras/common/etc/prometheus/${pkgname}.yml"
+  "/etc/carbonio/${pkgname}/${pkgname}.yml"
 )
 
 package() {
   cd "${srcdir}/process-exporter-${pkgver}.linux-amd64"
   
-  install -Dm755 process-exporter \
-    "${pkgdir}/opt/zextras/common/bin/process-exporter"
+  install -Dm 755 process-exporter "${pkgdir}/opt/zextras/common/bin/process-exporter"
 
-  install -Dm644 "${srcdir}"/${pkgname}.service \
-    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm644 "${srcdir}"/${pkgname}.default \
-    "${pkgdir}/etc/default/${pkgname}"
-  install -Dm644 "${srcdir}"/${pkgname}.yml \
-    "${pkgdir}/opt/zextras/common/etc/prometheus/${pkgname}.yml"
+  install -Dm 644 "${srcdir}"/${pkgname}.service "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "${srcdir}"/${pkgname}.default "${pkgdir}/etc/default/${pkgname}"
+  install -Dm 644 "${srcdir}"/${pkgname}.yml "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.yml"
 	
-  install -Dm644 "${srcdir}"/prometheus.sysusers \
-    "${pkgdir}/usr/lib/sysusers.d/${pkgname}".conf	
-  install -Dm644 "${srcdir}"/${pkgname}-consul.json \
-    "${pkgdir}/etc/zextras/service-discover/${pkgname}.json"
+  install -Dm 644 "${srcdir}"/prometheus.sysusers "${pkgdir}/usr/lib/sysusers.d/${pkgname}".conf	
+  install -Dm 644 "${srcdir}"/${pkgname}-consul.json "${pkgdir}/etc/zextras/service-discover/${pkgname}.json"
 	
 }
 
