--- a/packages/prometheus-alertmanager/PKGBUILD
+++ b/packages/prometheus-alertmanager/PKGBUILD
@@ -50,7 +50,7 @@ backup=(
 package() {
   cd "${srcdir}/alertmanager-${pkgver}.linux-amd64"
   
-  install -Dm 755 alertmanager "${pkgdir}/usr/bin/carbonio/${pkgname}/alertmanager"
+  install -Dm 755 alertmanager "${pkgdir}/usr/bin/carbonio/${pkgname}/${pkgname}"
   install -Dm 755 amtool "${pkgdir}/usr/bin/carbonio/${pkgname}/amtool"
 
   install -dm 750 -o210 -g210 "${pkgdir}/var/lib/alertmanager/data"
