--- a/packages/prometheus/prometheus.yml
+++ b/packages/prometheus/prometheus.yml
@@ -134,14 +134,14 @@ scrape_configs:
           replacement: '$2.{{ hostsdomain }}'
           target_label: instance
           
-  #- job_name: consulservices
-  #  consul_sd_configs:
-  #      - server: 'localhost:8500'
-  #      - token: '{{ consultoken }}'
-  #  relabel_configs:
-  #    - source_labels: [ __meta_consul_address, __meta_consul_service_metadata_prom_port]
-  #      separator: ":"
-  #      target_label: __address__
+  - job_name: 'services'
+    consul_sd_configs:
+        - server: 'localhost:8500'
+        - token: '{{ consultoken }}'
+    relabel_configs:
+      - source_labels: [ __meta_consul_address, __meta_consul_service_metadata_prom_port]
+        separator: ":"
+        target_label: __address__
   # - job_name: thanos
   # file_sd_configs:
   # - files:
