--- a/packages/prometheus/prometheus.yml
+++ b/packages/prometheus/prometheus.yml
@@ -136,8 +136,10 @@ scrape_configs:
           
   - job_name: 'services'
     consul_sd_configs:
-        - server: 'localhost:8500'
-        - token: '{{ consultoken }}'
+    - server: 'localhost:8500'
+    - token: '{{ consultoken }}'
+      tags:
+        - 'prometheus-exporter'
     relabel_configs:
       - source_labels: [ __meta_consul_address, __meta_consul_service_metadata_prom_port]
         separator: ":"
