--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -19,7 +19,7 @@ sources=(
   "${pkgname}.default"
   "${pkgname}.service"
   "${pkgname}.yml"
-  "${pkgname}-consul.json"
+  "${pkgname}-consul.hcl"
   "set-${pkgname}.sh"
   "prometheus.sysusers"
 )
@@ -44,7 +44,7 @@ conflicts=(
 backup=(
   "/etc/default/${pkgname}"
   "/etc/carbonio/${pkgname}/${pkgname}.yml"
-  "/etc/zextras/service-discover/${pkgname}.json"
+  "/etc/zextras/service-discover/${pkgname}.hcl"
 )
 
 package() {
@@ -61,7 +61,7 @@ package() {
   install -Dm 644 "${srcdir}/${pkgname}.yml" "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.yml"
 
   install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"	
-  install -Dm 644 "${srcdir}/${pkgname}-consul.json" "${pkgdir}/etc/zextras/service-discover/${pkgname}.json"		
+  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"		
 }
 
 postinst() {
