--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -56,7 +56,7 @@ package() {
   install -Dm 640 -g210 "${srcdir}/prometheus.yml" "${pkgdir}/etc/carbonio/${pkgname}/prometheus.yml"
   cp -r consoles* "${pkgdir}/etc/carbonio/${pkgname}/"
 	
-  install -Dm 755 "${srcdir}/set-prometheus.sh" "${pkgdir}/usr/bin/carbonio/${pkgname}/set-${pkgname}.sh"
+  install -Dm 755 "${srcdir}/set-prometheus.sh" "${pkgdir}/usr/bin/set-${pkgname}.sh"
   install -Dm 644 "${srcdir}/prometheus.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
   install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
   install -Dm 644 "${srcdir}/prometheus.default" "${pkgdir}/etc/default/${pkgname}"
