--- a/packages/prometheus-blackbox/PKGBUILD
+++ b/packages/prometheus-blackbox/PKGBUILD
@@ -50,12 +50,12 @@ package() {
 
   install -Dm 755 blackbox_exporter  "${pkgdir}}/usr/bin/carbonio/${pkgname}"
 
-  install -Dm 644 "${srcdir}"/${pkgname}.service  "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm 644 "${srcdir}"/${pkgname}.default  "${pkgdir}/etc/default/${pkgname}"
+  install -Dm 644 "${srcdir}/${pkgname}.service"  "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "${srcdir}/${pkgname}.default"  "${pkgdir}/etc/default/${pkgname}"
 
   install -Dm 644 -g210 "${srcdir}/${pkgname}.yml"  "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.yml"
   install -Dm 644 "${srcdir}/prometheus.sysusers"  "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"	
-  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"
+  install -Dm 644 "${srcdir}/${pkgname}.hcl" "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"
   
 }
 
