--- a/packages/prometheus-blackbox/PKGBUILD
+++ b/packages/prometheus-blackbox/PKGBUILD
@@ -48,8 +48,7 @@ backup=(
 package() {
   cd "${srcdir}/blackbox_exporter-${pkgver}.linux-amd64/"
 
-  install -Dm 755 blackbox_exporter "${pkgdir}}/usr/bin/carbonio/${pkgname}/${pkgname}"
-  install -Dm 755 blackbox_exporter2 "${pkgdir}}/usr/bin/carbonio/${pkgname}/${pkgname}"
+  install -Dm 755 blackbox_exporter "${pkgdir}/usr/bin/carbonio/${pkgname}/${pkgname}"
 
   install -Dm 644 "${srcdir}/${pkgname}.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
   install -Dm 644 "${srcdir}/${pkgname}.default" "${pkgdir}/etc/default/${pkgname}"
