--- a/packages/prometheus-node/PKGBUILD
+++ b/packages/prometheus-node/PKGBUILD
@@ -45,7 +45,7 @@ conflicts=(
 package() {
   cd "${srcdir}/node_exporter-${pkgver}.linux-amd64"
 
-  install -Dm 755 node_exporter "${pkgdir}/usr/bin/carbonio/${pkgname}/${pkgname}"
+  install -Dm 755 node_exporter "${pkgdir}/usr/${pkgname}"
 
   install -Dm 644 "${srcdir}/${pkgname}.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
   install -Dm 644 "${srcdir}/${pkgname}.default" "${pkgdir}/etc/default/${pkgname}"
