--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -50,9 +50,9 @@ backup=(
 package() {
   cd "${srcdir}"
   gunzip -f openldap_exporter-linux-amd64.gz
-  install -Dm 755 openldap_exporter-linux-amd64 "${pkgdir}/usr/bin/carbonio/${pkgname}/${pkgname}"
+  install -Dm 755 openldap_exporter-linux-amd64 "${pkgdir}/usr/${pkgname}"
 
-  install -Dm 755 "${srcdir}/set-${pkgname}.sh" "${pkgdir}/usr/bin/carbonio/${pkgname}/set-${pkgname}.sh"
+  install -Dm 755 "${srcdir}/set-${pkgname}.sh" "${pkgdir}/usr/set-${pkgname}.sh"
 
   install -Dm 644 "${srcdir}/${pkgname}.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
 	
@@ -72,7 +72,7 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  /usr/bin/carbonio/${pkgname}/set-${pkgname}.sh 	
+  /usr/set-${pkgname}.sh 	
 
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
