--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -19,7 +19,7 @@ sources=(
   "prometheus.default"
   "prometheus.service"
   "prometheus.sysusers"
-  "prometheus.yml.template"
+  "prometheus.yml"
   "carbonio-prometheus.sh"
   "policies.json"
 )
@@ -41,8 +41,8 @@ conflicts=(
   "prometheus"
 )
 
-backup=(
-  "/etc/carbonio/${pkgname}/prometheus.yml"
+ backup=(
+   "/etc/carbonio/${pkgname}/prometheus.yml"
 )
 
 
@@ -54,7 +54,7 @@ package() {
 
   install -dm 750 -o210 -g210 "${pkgdir}/var/lib/prometheus"
 
-  install -Dm 640 -g210 "${srcdir}/prometheus.yml.template" "${pkgdir}/etc/carbonio/${pkgname}/prometheus.yml.template"
+  install -Dm 640 -g210 "${srcdir}/prometheus.yml" "${pkgdir}/etc/carbonio/${pkgname}/prometheus.yml"
   install -Dm 640 -g210 "${srcdir}/policies.json" "${pkgdir}/etc/carbonio/${pkgname}/service-discover/policies.json"
   cp -r consoles* "${pkgdir}/etc/carbonio/${pkgname}/"
 	
