--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -4,7 +4,7 @@ targets=(
 )
 pkgname="carbonio-prometheus"
 pkgver="2.40.2"
-pkgrel="6"
+pkgrel="7"
 pkgdesc="An open-source systems monitoring and alerting toolkit"
 pkgdesclong=(
   "An open-source systems monitoring and alerting toolkit"
@@ -59,6 +59,7 @@ package() {
   cp -r consoles* "${pkgdir}/etc/carbonio/${pkgname}/"
 	
   install -Dm 644 "${srcdir}/${pkgname}.sh" "${pkgdir}/etc/zextras/pending-setups.d/${pkgname}.sh"
+  install -Dm 644 "${srcdir}/${pkgname}.sh" "${pkgdir}/usr/bin/set-${pkgname}.sh"
 
   install -Dm 644 "${srcdir}/prometheus.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
   install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
