--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -59,8 +59,7 @@ package() {
   cp -r consoles* "${pkgdir}/etc/carbonio/${pkgname}/"
 	
   install -Dm 644 "${srcdir}/${pkgname}.sh" "${pkgdir}/etc/zextras/pending-setups.d/${pkgname}.sh"
-  install -Dm 644 "${srcdir}/${pkgname}.sh" "${pkgdir}/usr/bin/set-${pkgname}.sh"
-
+  
   install -Dm 644 "${srcdir}/prometheus.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
   install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
   install -Dm 644 "${srcdir}/prometheus.default" "${pkgdir}/etc/default/${pkgname}"
@@ -81,7 +80,7 @@ postinst() {
 
   echo "======================================================"
   echo "Carbonio Prometheus installed successfully!"
-  echo "You have to complete config running set-${pkgname}.sh"
+  echo "You have to complete config running pending setup"
   echo "======================================================"
 }
 
