--- a/packages/prometheus/prometheus.yml
+++ b/packages/prometheus/prometheus.yml
@@ -168,4 +168,29 @@ scrape_configs:
         target_label: target
       - target_label: __address__
         replacement: 127.0.0.1:9115
-        
+  - job_name: 'advanced-auth'
+    metrics_path: /service/extension/metrics/auth
+    consul_sd_configs:
+    - server: 'localhost:8500'
+    - token: '{{ consultoken }}'
+      datacenter: 'dc1'
+      services:
+        - 'carbonio-mailbox'
+    relabel_configs:
+        - source_labels: ['__meta_consul_node']
+          regex: "(agent|server)-(.+)-"
+          replacement: '$2.'
+          target_label: instance
+  - job_name: 'advanced-powerstore'
+    metrics_path: /service/extension/metrics/powerstore
+    consul_sd_configs:
+    - server: 'localhost:8500'
+    - token: '{{ consultoken }}'
+      datacenter: 'dc1'
+      services:
+        - 'carbonio-mailbox'
+    relabel_configs:
+        - source_labels: ['__meta_consul_node']
+          regex: "(agent|server)-(.+)-"
+          replacement: '$2.'
+          target_label: instance        
